force-app/main/default/objects/FiscalForm__c/FiscalForm__c.object-meta.xml
<CustomObject>
    <description>PacPoint-AC081120 - Case# 10552 - Created for DCCA - Fiscal Forms CR - Creating to capture the Fiscal Form records.</description>
    <label>Fiscal Form</label>
    <nameField>
        <label>Fiscal Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiscal Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>