force-app/main/default/objects/FiscalForm__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>PacPoint-AC081120 - Case# 10552 - Created for DCCA Fiscal Form CR - Creating for capturing of forms</description>
    <inlineHelpText>Populate the End Date for pulling payments.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>