force-app/main/default/objects/FiscalForm__c/fields/FolderName__c.field-meta.xml
<CustomField>
    <fullName>FolderName__c</fullName>
    <formula>If( RecordType.DeveloperName == &apos;DepositSlip&apos;, &apos;Deposit Slip&apos;, 
If( RecordType.DeveloperName == &apos;TDR&apos;, &apos;Treasury Deposit Receipts (TDR)&apos;,
If( RecordType.DeveloperName == &apos;RECWKST&apos;, &apos;Daily Reconciliation of Collections &amp; Deposit&apos;, 
If( RecordType.DeveloperName == &apos;JV&apos;, &apos;Journal Voucher&apos;, &apos;&apos;))))</formula>
    <label>Folder Name</label>
    <type>Text</type>
</CustomField>