force-app/main/default/objects/FiscalForm__c/fields/FundType__c.field-meta.xml
<CustomField>
    <fullName>FundType__c</fullName>
    <label>Fund Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>