force-app/main/default/objects/FiscalForm__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>PacPoint-AC081120 - Case# 10552 - Created for DCCA Fiscal Form CR - Creating for capturing of forms</description>
    <inlineHelpText>Populate the Start Date of pulling payments,</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>