force-app/main/default/objects/FiscalForm__c/recordTypes/DepositSlip.recordType-meta.xml
<RecordType>
    <fullName>DepositSlip</fullName>
    <active>true</active>
    <description>PacPoint-AC081120 - Case# 10552 - Created for DCCA - Fiscal Forms CR - Creating to capture the Fiscal Form records.</description>
    <label>Deposit Slip</label>
</RecordType>