force-app/main/default/objects/FiscalForm__c/recordTypes/TDR.recordType-meta.xml
<RecordType>
    <fullName>TDR</fullName>
    <active>true</active>
    <description>PacPoint-AC081120 - Case# 10552 - Created for DCCA - Fiscal Forms CR - Creating to capture the Fiscal Form records.</description>
    <label>TDR</label>
</RecordType>