force-app/main/default/objects/FiscalForm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>FundType__c</columns>
    <columns>Division__c</columns>
    <columns>PaymentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>