force-app/main/default/objects/FiscalForm__c/listViews/All_Fiscal_Form.listView-meta.xml
<ListView>
    <fullName>All_Fiscal_Form</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>FundType__c</columns>
    <columns>PaymentType__c</columns>
    <columns>Division__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Fiscal Form</label>
</ListView>