force-app/main/default/objects/FiscalForm__c/listViews/All_Fiscal_Forms.listView-meta.xml
<ListView>
    <fullName>All_Fiscal_Forms</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Division__c</columns>
    <columns>FundType__c</columns>
    <columns>PaymentType__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fiscal Forms</label>
</ListView>