force-app/main/default/objects/FiscalForm__c/listViews/All_TDR.listView-meta.xml
<ListView>
    <fullName>All_TDR</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>FundType__c</columns>
    <columns>PaymentType__c</columns>
    <columns>Division__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FiscalForm__c.TDR</value>
    </filters>
    <label>All TDR</label>
</ListView>