force-app/main/default/objects/FiscalForm__c/listViews/TREASURY_RECEIPT_DEPOSIT.listView-meta.xml
<ListView>
    <fullName>TREASURY_RECEIPT_DEPOSIT</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>FundType__c</columns>
    <columns>Division__c</columns>
    <columns>PaymentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FiscalForm__c.TDR</value>
    </filters>
    <label>TREASURY RECEIPT DEPOSIT</label>
</ListView>